--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav>
-    <a href="Home.html">Home</a>
+    <a href="home.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
